--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   vulnerable-app:
     build: ./vulnerable-app
@@ -7,7 +5,49 @@ services:
       - "8080:80"
     networks:
       - security-lab
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
     container_name: vulnerable-web
+
+  # Add vulnerable FTP server (ARM64 compatible)
+  vulnerable-ftp:
+    image: fauria/vsftpd
+    ports:
+      - "21:21"
+      - "21100-21110:21100-21110"
+    environment:
+      - FTP_USER=admin
+      - FTP_PASS=password
+      - PASV_ADDRESS=127.0.0.1
+      - PASV_MIN_PORT=21100
+      - PASV_MAX_PORT=21110
+    networks:
+      - security-lab
+    container_name: vulnerable-ftp
+
+  # Add vulnerable SSH server
+  vulnerable-ssh:
+    build: ./vulnerable-ssh
+    ports:
+      - "2222:22"
+    networks:
+      - security-lab
+    container_name: vulnerable-ssh
+
+  # Add vulnerable database (ARM64 compatible)
+  vulnerable-db:
+    image: mysql:8.0
+    platform: linux/amd64
+    ports:
+      - "3306:3306"
+    environment:
+      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_DATABASE=webapp
+      - MYSQL_USER=webapp
+      - MYSQL_PASSWORD=password123
+    networks:
+      - security-lab
+    container_name: vulnerable-db
 
   security-tools:
     build: ./security-tools
@@ -17,6 +57,24 @@ services:
     stdin_open: true
     tty: true
 
+  # Add n8n automation platform
+  n8n:
+    image: n8nio/n8n
+    ports:
+      - "5678:5678"
+    environment:
+      - N8N_BASIC_AUTH_ACTIVE=true
+      - N8N_BASIC_AUTH_USER=admin
+      - N8N_BASIC_AUTH_PASSWORD=password
+    volumes:
+      - n8n_data:/home/node/.n8n
+    networks:
+      - security-lab
+    container_name: n8n-automation
+
 networks:
   security-lab:
     driver: bridge
+
+volumes:
+  n8n_data:
